--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <h1>Todo app</h1> 
 <input placeholder="enter your name" />  
 <button>add task</button>
+<div>
 <ul>
-    <li>eat<button class="delete">delete</button></li>
-    <li>sleep<button class="delete">delete</button></li>
+     <li>eat<button class="delete">delete</button></li><br>
+    <li>sleep<button class="delete">delete</button></li><br>
 </ul>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
